add images and references

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
   <body>
     <header class="page-header">
-    	<div class="container">
-      Мои контакты: тел. 8-921-462-60-60
+    	<div class="container"> 
+        <a class="header-email" href="mailto:sportloto82@list.ru">sportloto82@list.ru</a>
+        <a class="header-phone" href="tel:+79214626060">+7 921 462 60 60</a>
       </div>
     </header>
 
@@ -25,7 +26,10 @@
     <section class="intro">
       <div class="container">
       	<h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Осваиваю новую профессию</h3>
+      <h3>Начинающий верстальщик</h3>
+      <figure class="user-image" >
+        <img src="files/user.jpg" width="928" height="536" alt="Интро-фото">
+      </figure>
       <p>Экономист по образованию, после второго декрета решила поискать себя в ИТ-сфере.</p>
       <h3>Чем могу быть полезна</h3>
       <p>Пока еще я совсем начинающий верстальщик, но я стараюсь каждый день продвигаться в профессии.</p>
@@ -37,7 +41,10 @@
       <h2 class="subheading">Мои работы</h2>
 
       <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+      </figure>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
 
       <h3>Сайт-заглушка</h3>
       <p> Сайт со счетчиком обратного отсчета.</p>
@@ -46,7 +53,8 @@
 
     <footer class="page-footer">
     	<div class="container">
-      Пишите на почту: sportloto82@list.ru
+     <a class="footer-email" href="mailto:sportloto82@list.ru">sportloto82@list.ru</a>
+     <a class="footer-phone" href="tel:+79214626060">+79214626060</a>
       </div>
     </footer>
   </body>
